# bravo

./: .gitignore  Dockerfile  README.md  apache-example.conf  auth.py  base_coverage.py  bravo  data-import.sh  docker-compose.yml  download_canonical_transcripts.pl  exac.py  forms.py  get_genes_by_var_count.py  lookups.py  manage.py  meta.yaml  parsing.py  pycoverage.py  requirements.txt  sequences.py  sequences_cache_monitor.cron  sequences_cache_monitor.py  server-api.py  server-auth.py  setup.sh  utils.py  whitelist-inpsyght.txt
backup/: backup-cmds.sh  test_backup.sh
config/: default.py
contact_request/: get_studies_with_variant.py  make_studies_collection.py
data/: add_cadd_scores.py  add_percentiles.py  import_info.py  prepare_sequences.py  prepare_sequences2.py  remove_ac0.py
data/DataPrep/: .autotools  .cproject  .project  CMakeLists.txt  htslib.cmake  requirements.txt
data/DataPrep/src/: CMakeLists.txt  ComputeAlleleCounts.cpp  ComputeAlleleCountsAndHistograms.cpp  ComputeAlleleCountsAndHistograms2.cpp  ComputeHistograms.cpp  ComputeMetric.cpp  ComputeMetrics.cpp  ComputePercentiles.cpp  CountAlleles.cpp  Crams.cpp  Crams2.cpp  GTHistograms.cpp  GzipWriter.cpp  GzipWriter.h  Histogram.cpp  Histogram.h  INFOHistograms.cpp  INFOPercentiles.cpp  Metric.cpp  Metric.h  Metrics.cpp  Metrics.h  Percentiles.cpp  Percentiles.h  RandomHetHom.cpp  RandomHetHom2.cpp  RandomHetHom3.cpp  TypeSwitcher.cpp  TypeSwitcher.h  aux.cpp  aux.h
data/DataPrep/test/: CMakeLists.txt  ExecutableTest.cpp  HistogramTest.cpp  PercentilesTest.cpp  all_samples.test_input.vcf.gz.tbi  allelecounts_and_histograms.with_info_fields.output_ok.vcf.gz.tbi  input.subset.vcf.gz.tbi  input.with_info_fields.vcf.gz.tbi
data/base_coverage/: create_coverage.py  merge_coverage.py  prune_coverage.py
data/base_coverage/glf2depth/: Makefile  glf2depth.cpp
data/new_vcf_info/: compute_info.py  merge_gzvcfs_by_pos.py  run_parallel_compute_info.sh  run_slurm_compute_info.sh
data/request_study_contact/: PI_email_addresses.txt  get_studies_with_variant.py
data/samples/: PI_email_addresses.txt  import_substudies.py
deploy/: INSTALL.sh  download_canonical_transcripts.pl  setup.sh
static/: common.css  common.js  error_404.html  error_500.html  exac.js  gene.js  plot.js  region.js  style.css  transcript.js  transcript_or_gene_graph.js  users_table.js  variant.js  variant_igv.js  variant_table.js
static/tools/: bravo
static/tools/linux/: bravo
static/tools/macos/: bravo
static/tools/tutorial/: Bravo_API_Tutorial.html  clinvar_20180401_APOE.vcf
templates/: _region_gene_trans_base.html  about.html  administration.html  auth_ok.html  bad_request.html  coverage_selectors.html  download.html  error.html  gene.html  help.html  homepage.html  layout.html  list_contact_requests.html  not_found.html  region.html  region_display.html  request_study_contact.html  terms.html  transcript.html  transcript_display.html  transcript_or_gene_graph.html  user_profile.html  variant.html  variant_consequence.html  variant_consequences.html  variant_definition_list.html  variant_details.html  variant_quality_metrics.html  variant_selectors.html  variant_summary.html  variant_table.html  variant_table_template.html
tests/: test_bravo_api_client.py
